--- a/_includes/project-header.html
+++ b/_includes/project-header.html
@@ -1,4 +1,4 @@
-<div class="project-header post-header loading-animation" style="background-image: url('{{ page.header-img }}')">
+<div class="project-header loading-animation">
     <div class="container">
         <div>
             <div class="header-project-title">
@@ -7,6 +7,6 @@
             <div class="header-project-des">
                 {{ page.description }}
             </div>
-        </div>    
+        </div>
     </div>
 </div>
