--- a/_sass/_catalogue.scss
+++ b/_sass/_catalogue.scss
@@ -1,6 +1,4 @@
 .catalogue {
-    margin-top: 72px;
-    
     &-item {
         border-bottom: 1px solid $grey-2;
         padding: 36px 0;
@@ -92,4 +90,9 @@
 .catalogue-info {     
     cursor: pointer;
     opacity: .6;
+}
+
+.catalogue-img {
+    border-radius: 6px;
+    box-shadow: 6px 0 40px 8px rgba(0,0,0,.05);
 }
