--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -3,6 +3,9 @@
   margin-top: 20px;
   max-width: 750px;
   width: 80%;
+    @media (max-width: $break-small) {
+        width: 88%;
+    }
 }
 
 main,
