--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -31,6 +31,7 @@
     .header-project-des {
         padding-top: 6px;
         font-size: 20px;
+        color: $grey-1;
         
         @media (max-width: $break-small) {
             font-size: 17px;
