--- a/_sass/_catalogue.scss
+++ b/_sass/_catalogue.scss
@@ -1,6 +1,6 @@
 .catalogue {
     &-item {
-        border-bottom: 1px solid $grey-2;
+        border-bottom: 1px solid rgba(0,0,0,.07);
         padding: 36px 0;
         list-style: none;
 
