--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,10 +1,10 @@
 .container {
-  margin: 0 auto;
-  margin-top: 20px;
+  margin: 40px auto;
   max-width: 750px;
   width: 80%;
     @media (max-width: $break-small) {
         width: 88%;
+        margin: 24px auto;
     }
 }
 
