portfolio > description added

--- a/_includes/post-list.html
+++ b/_includes/post-list.html
@@ -1,6 +1,6 @@
 <li class="catalogue-item">
     <a href="{{ page.url | prepend: site.baseurl }}" >
-        {% if page.img == true %}
+        {% if page.portfolio == true %}
         <img src="{{ page.main-img }}" class="catalogue-img"/>
         {% endif %}
         {% if page.draft == true %}
