--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -8,6 +8,7 @@ p, h2 {
 $default-shade: #10171f;
 $default-tint: #8898aa;
 $grey-0: #333e4c;
+$grey-0-80: rgba(51, 62, 76, .8);
 $grey-1: #90949a;
 $grey-2: #D8E0E7;
 $grey-2-70: rgba(216, 224, 231, .7);
