--- a/_sass/_catalogue.scss
+++ b/_sass/_catalogue.scss
@@ -92,6 +92,6 @@
 }
 
 .catalogue-img {
-    border-radius: 6px;
-    box-shadow: 6px 0 40px 8px rgba(0,0,0,.05);
+    border-radius: 3px;
+//    box-shadow: 6px 0 40px 8px rgba(0,0,0,.05);
 }
