--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -46,6 +46,11 @@ footer>.footer_wrap,
       &:last-child {
           margin-right: 0;
       }
+      
+      @media (max-width: $break-small) {
+          margin: 0 28px 0 0;
+      }
+      
   }
     li:hover {
           opacity: 0.5;
