--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -49,6 +49,7 @@ footer>.footer_wrap,
       
       @media (max-width: $break-small) {
           margin: 0 24px 0 0;
+          font-size: 16px;
       }
       
   }
