--- a/_includes/resume.html
+++ b/_includes/resume.html
@@ -1,36 +1,12 @@
 <div class="loading-animation">
-<section class="resume">
-    <div class="resume-info">
-        <p class="second-label">
-            <span class="label-emoji">
-                &#x1F64B;
-            </span>    
-            &nbsp; I've worked for
-        </p>
-    </div>
-    <ul>
-
-        {% include project-list.html %}
-
-    </ul>
-    
-    <a href="{{ site.baseurl | append: '/project' }}" class="transition"> 
-        <div class="view-all-projects transition">
-            View Selected Projects
-            <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><defs><style>.cls-1{fill:none;}</style></defs><path d="M7.2,17.9l6.1-6.1L7.2,5.6,9,3.8l8,8-8,8Z"/><path class="cls-1" d="M.1-.2h24v24H.1Z"/></svg>
-        </div>
-    </a>
-
-</section>
-
 
 <section class="skill">
     <div class="resume-info">
-        <p class="second-label">
+        <p class="second-label" style="color:#FB8C00;">
             <span class="label-emoji">
                 &#x1F4AA;
             </span>
-            &nbsp; Available My Skill & Role
+            &nbsp; My Skill
         </p>
     </div>    
     <ul>
