--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,16 +9,16 @@
         <div class="nav-container">
             <ul>
                 <li class="transition">
-                    <a href="{{ '' | prepend: site.baseurl }}/" {% if current[1] == "about" or current[1] == "blog" or current[1] == "book" or current[1] == "project" %} class="normal" {% endif %} class="active">Home</a>
+                    <a href="{{ '' | prepend: site.baseurl }}/" {% if current[1] == "about" or current[1] == "Web Develop" or current[1] == "GO Lang" or current[1] == "Blog" %} class="normal" {% endif %} class="active">Home</a>
                 </li>
                 <li class="transition">
-                    <a href="{{ '/project' | prepend: site.baseurl }}" {% if current[1] == "project" %} class="active"{% endif %} >Project</a>
+                    <a href="{{ '/Web Develop' | prepend: site.baseurl }}" {% if current[1] == "blog" %} class="active"{% endif %} >Web Develop</a>
+                </li>
+                <li class="transition">
+                    <a href="{{ '/GO Lang' | prepend: site.baseurl }}" {% if current[1] == "blog" %} class="active"{% endif %} >GO Lang</a>
                 </li>
                 <li class="transition">
                     <a href="{{ '/blog' | prepend: site.baseurl }}" {% if current[1] == "blog" %} class="active"{% endif %} >Blog</a>
-                </li>
-                <li class="transition">
-                    <a href="{{ '/book' | prepend: site.baseurl }}" {% if current[1] == "book" %} class="active"{% endif %} >Book</a>
                 </li>
                 <li class="transition">
                     <a href="{{ '/about' | prepend: site.baseurl }}" {% if current[1] == "about" %} class="active"{% endif %} >Who am I ?</a>
