--- a/_includes/head.html
+++ b/_includes/head.html
@@ -25,7 +25,14 @@
     <meta property="og:description" content="{% if page.main == true %}{{ page.description }}{% else %}{{ page.content | truncatewords: 30 | strip_html }}{% endif %}"/>
     
     <meta name="twitter:description" content="{% if page.main == true %}{{ page.description }}{% else %}{{ page.content | truncatewords: 30 | strip_html }}{% endif %}">
-    
+  
+  <!-- particles -->
+  <!--<link rel="stylesheet" href="css/style.css" />-->
+  <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+
+  <script type='text/javascript' src='../jquery.particleground.js'></script>
+  <script type='text/javascript' src='js/demo.js'></script>
+
   <!-- CSS -->
   <link rel="stylesheet" href="{{ site.baseurl }}/styles.css">
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700" rel="stylesheet">
