--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -11,9 +11,9 @@
 main,
 footer>.footer_wrap,
 .nav-container {
-  margin: 0 auto;
-  max-width: 750px;
-  width: 80%;
+  margin: 0px 0px 0px 0px;
+  max-width: 100%;
+  width: 100%;
     @media (max-width: $break-small) {
         width: 88%;
     }
