--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,13 +9,10 @@
         <div class="nav-container">
             <ul>
                 <li class="transition">
-                    <a href="{{ '' | prepend: site.baseurl }}/" {% if current[1] == "about" or current[1] == "Web Develop" or current[1] == "GO Lang" or current[1] == "Blog" %} class="normal" {% endif %} class="active">Home</a>
+                    <a href="{{ '' | prepend: site.baseurl }}/" {% if current[1] == "about" or current[1] == "develop" or current[1] == "blog" %} class="normal" {% endif %}  class="active">Home</a>
                 </li>
                 <li class="transition">
-                    <a href="{{ '/Web Develop' | prepend: site.baseurl }}" {% if current[1] == "blog" %} class="active"{% endif %} >Web Develop</a>
-                </li>
-                <li class="transition">
-                    <a href="{{ '/GO Lang' | prepend: site.baseurl }}" {% if current[1] == "blog" %} class="active"{% endif %} >GO Lang</a>
+                    <a href="{{ '/develop' | prepend: site.baseurl }}" {% if current[1] == "develop" %} class="active"{% endif %} >Develop</a>
                 </li>
                 <li class="transition">
                     <a href="{{ '/blog' | prepend: site.baseurl }}" {% if current[1] == "blog" %} class="active"{% endif %} >Blog</a>
