purple_to_orange

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -72,17 +72,17 @@ td {
 }
 
 ::selection {
-    background: $purple;
+    background: $orange;
     color: #FFF;
     text-shadow: none;
 }
 ::-moz-selection {
-    background: $purple;
+    background: $orange;
     color: #FFF;
     text-shadow: none;
 }
 ::-webkit-selection {
-    background: $purple;
+    background: $orange;
     color: #FFF;
     text-shadow: none;
 }
