--- a/_sass/_code.scss
+++ b/_sass/_code.scss
@@ -6,7 +6,7 @@ code {
 code {
   background-color: $grey-4;
   border-radius: 3px;
-  color: $purple;
+  color: $orange;
   font-size: 85%;
   padding: .2em .4em;
 }
