--- a/_sass/_resume.scss
+++ b/_sass/_resume.scss
@@ -3,7 +3,7 @@
     font-family: $source;
     font-size: 18px;
     font-weight: 600;
-    color: $purple;
+    color: $orange;
     vertical-align: middle;
     
     .label-emoji {
@@ -17,7 +17,7 @@ div.resume-info {
 
     svg {
         width: 24px;
-        fill: $purple;
+        fill: $orange;
         position: absolute;
     }
 }
@@ -89,7 +89,7 @@ div.resume-info {
 section.skill {
     svg {
         width: 24px;
-        fill: $purple;
+        fill: $orange;
         position: absolute;
     }
     padding-bottom: 72px;
