--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -59,7 +59,7 @@
     sup {
         a.footnote {
             background: none;
-            color: $purple;
+            color: $orange;
         }
     }
     img {
@@ -73,12 +73,12 @@
         background-position: 0% 100%, 110% 90%, 0% 98%;
         background-repeat: no-repeat, no-repeat, repeat-x;
         background-size: 2px 1px, 2px 1px, 1px 1px;
-        background-image: linear-gradient(#fff, #fff), linear-gradient(#fff, #fff), linear-gradient($purple, $purple);
+        background-image: linear-gradient(#fff, #fff), linear-gradient(#fff, #fff), linear-gradient($orange, $orange);
     }
     
     a:hover {
-        color: $purple;
-        text-decoration-color: $purple;
+        color: $orange;
+        text-decoration-color: $orange;
     }
     
         a.book-link {
@@ -103,7 +103,7 @@
                 }
             }
             .book-cover:hover {
-                border: 1px solid #8565fc;
+                border: 1px solid #FB8C00;
             }
         }
             a.book-link:after {
@@ -233,7 +233,7 @@
         h1 {
             font-family: $source;
             letter-spacing: 0.01em;
-            color: $purple;
+            color: $orange;
             padding-bottom: 7px;
             font-size: 25px;
             
@@ -248,12 +248,12 @@
 sup {
         a.footnote {
             background: none;
-            color: $purple;
+            color: $orange;
         }
     }
 
 .post-type {
-    color: $purple;
+    color: $orange;
     font-size: 18px;
     font-family: $source;
     font-weight: 600;
@@ -324,7 +324,7 @@ sup {
             margin: 0;
             a.reversefootnote {
                 background: none;
-                color: $purple;
+                color: $orange;
             }
             a:hover {
                 opacity: .6;
