--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -22,6 +22,8 @@ $shadow-color: rgba(0, 0, 0, .2);
 $ridi-blue: #1f8ce6;
 $ridi-skyblue: #66baff;
 $purple: #8565fc;
+$orange: #FB8C00;
+$light-orange: #FFB74D;
 $light-purple: #997EFA;
 
 // media
