--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -79,10 +79,10 @@ a {
 footer {
     font-family: $source;
     padding: 36px 0 46px 0;
-    background-color: $grey-3;
+    background-color: #FFFDE7;
     color: $default-tint;
-    border-top: 1px solid $grey-2;
-    border-bottom: 1px solid $grey-2;
+    border-top: 1px solid #FFF9C4;
+    border-bottom: 1px solid #FFF9C4;
     
     .footer_wrap {
         font-style: normal;
