--- a/_sass/_catalogue.scss
+++ b/_sass/_catalogue.scss
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: "SCDREAM";
+        src: url( '../_assets/fonts/SCDREAM4.OTF') format( 'embedded-opentype');
+  }
+
 .catalogue {
     &-item {
         border-bottom: 1px solid rgba(0,0,0,.07);
@@ -14,7 +19,7 @@
     &-type {
         color: $orange;
         font-size: 18px;
-        font-family: $source;
+        font-family: SCDREAM;
         font-weight: 600;
         margin-bottom: 10px;
     }
@@ -23,7 +28,7 @@
         display: inline-block;
         
         .catalogue-tag {
-            font-family: $source;
+            font-family: SCDREAM;
             display: inline-block;
             margin-bottom: 2px;
             text-transform: uppercase;
