--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: "SCDREAM";
+        src: url( '.../_assets/fonts/SCDREAM4.OTF') format( 'embedded-opentype');
+}
+
 .container {
   margin: 40px auto;
   max-width: 750px;
@@ -38,7 +43,7 @@ footer>.footer_wrap,
 
 .nav-container {
   li {
-      font-family: $source;
+      font-family: SCDREAM;
       display: inline-block;
       margin: 0 40px 0 0;
       
@@ -77,7 +82,7 @@ a {
 //footer
 
 footer {
-    font-family: $source;
+    font-family: SCDREAM;
     padding: 36px 0 46px 0;
     background-color: #FFFDE7;
     color: $default-tint;
