--- a/_sass/_pagination.scss
+++ b/_sass/_pagination.scss
@@ -1,5 +1,10 @@
+@font-face {
+  font-family: "SCDREAM";
+      src: url( '../_assets/fonts/SCDREAM4.OTF') format( 'embedded-opentype');
+}
+
 .pagination {
-  font-family: $source;
+  font-family: SCDREAM;
   padding: 1rem 0 3rem 0;
   position: relative;
   text-align: center;
