--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -38,7 +38,7 @@ $break-small: 670px;
 // $san-serif: "Source Sans Pro", "APPLE SD Gothic Neo", HelveticaNeue, Helvetica, "NanumGothic", "맑은 고딕", "Malgun Gothic", arial, sans-serif;
 // $serif: "Nanum Myeongjo",sans-serif;
 // $source: 'Source Sans Pro', sans-serif;
-SCDREAM : 'SCDREAM1.OTF','SCDREAM2.OTF','SCDREAM3.OTF','SCDREAM4.OTF','SCDREAM5.OTF','SCDREAM6.OTF','SCDREAM7.OTF','SCDREAM8.OTF','SCDREAM9.OTF';
+$SCDREAM : 'SCDREAM1.OTF','SCDREAM2.OTF','SCDREAM3.OTF','SCDREAM4.OTF','SCDREAM5.OTF','SCDREAM6.OTF','SCDREAM7.OTF','SCDREAM8.OTF','SCDREAM9.OTF';
 // $monospaced-font: Menlo, Monaco, monospace;
 // $code-color: #bf616a;
 
