--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -16,12 +16,12 @@ body {
 }
 
 html {
-  font-family: SCDREAM;
+  font-family: "SCDREAM";
   font-size: 17px;
 
   @media (min-width: $break-small) {
     font-size: 18px;
-  }fd
+  }
 }
 
 body {
