--- a/_sass/_resume.scss
+++ b/_sass/_resume.scss
@@ -35,7 +35,7 @@ div.resume-info {
         border-top: 1px solid rgba(0,0,0,.07);
         
         .workplace-name {
-            font-family: $san-serif;
+            font-family: SCDREAM;
             font-size: 20px;
             font-weight: 700;
             width: 42%;
