--- a/_sass/_catalogue.scss
+++ b/_sass/_catalogue.scss
@@ -49,7 +49,7 @@
         h1.catalogue-title {
             color: $grey-0;
             display: block;
-            font-family: $san-serif;
+            font-family: SCDREAM;
             font-size: 24px;
             font-weight: 700;
             line-height: 1.5;
