--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -56,7 +56,7 @@
         line-height: 1.8;
         margin: 0 0 10px 0;
         word-break: break-all;
-        font-family: $san-serif;
+        font-family: SCDREAM;
         font-weight: 400;
         letter-spacing: -0.009em;
       
@@ -259,7 +259,7 @@ sup {
 .post-type {
     color: $orange;
     font-size: 18px;
-    font-family: SCDREAM,$source;
+    font-family: SCDREAM,SCDREAM;
     font-weight: 600;
 }
 
@@ -271,7 +271,7 @@ sup {
     padding: 0 0 12px 0;
     font-weight: 700;
     font-size: 32px;
-    font-family: $san-serif;
+    font-family: SCDREAM;
     line-height: 1.2;
     letter-spacing: -0.009em;
     
