--- a/_sass/_section.scss
+++ b/_sass/_section.scss
@@ -37,7 +37,7 @@ section.explanation {
     h2.intro {
         font-size: 30px;
         font-weight: 400;
-        font-family: $san-serif;
+        font-family: SCDREAM;
         line-height: 1.4;
         word-wrap: normal;
         margin: 20px 0 0 0;
