--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -84,10 +84,8 @@ a {
 footer {
     font-family: SCDREAM;
     padding: 36px 0 46px 0;
-    background-color: #FFFDE7;
+    background-color: #ececec;
     color: $default-tint;
-    border-top: 1px solid #FFF9C4;
-    border-bottom: 1px solid #FFF9C4;
     
     .footer_wrap {
         font-style: normal;
