--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -283,7 +283,7 @@ sup {
     
 .post-info>h2.post-subtitle {
     padding: 0 0 60px 0;
-    font-weight: 400;
+    font-weight: bold;
     font-size: 22px;
     color: $grey-1;
     line-height: 1.5;
