--- a/_sass/_catalogue.scss
+++ b/_sass/_catalogue.scss
@@ -71,6 +71,7 @@
             color: $grey-1;
             line-height: 1.75;
             padding-bottom: 24px;
+            font-weight: bold;
 
             @media (max-width: $break-small) {
                 font-size: 16px;
