--- a/_includes/post-list.html
+++ b/_includes/post-list.html
@@ -15,8 +15,8 @@
             <h1 class="catalogue-title">
                 {{ page.title }}
             </h1>
-            <p class="catalogue-sub">
-                {{ page.subtitle }}
+            <p class="catalogue-date">
+                {{ page.date }} 작성
             </p>
             <p class="catalogue-body">
                 {{ page.content | truncatewords: 24 | strip_html }}
