200908_깃블로그 about.md 수정 및 ga 생성

--- a/_includes/job.html
+++ b/_includes/job.html
@@ -22,7 +22,7 @@
                 2019.08 ~
             </div>
             <div class="job-info__service">
-                <a href="https://fitchoo.kr/" target="_blank">Fitchoo</a>
+                <a href="https://pickling.kr/" target="_blank">Pickling</a>
             </div>
         </div>
 
