--- a/_includes/head.html
+++ b/_includes/head.html
@@ -37,26 +37,15 @@
   <!-- CSS -->
   <link rel="stylesheet" href="{{ site.baseurl }}/styles.css">
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700" rel="stylesheet">
-  <link rel="shortcut icon" href="http://www.jihyeleee.com/img/shortcut.png">
+  <link rel="shortcut icon" href="https://www.summerclout.dev/favicon.ico">
     
-  <!-- GA -->
-   <script async="" src="https://www.google-analytics.com/analytics.js"></script>
-    
-   <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-                    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-                m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-177307611-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-        ga('create', 'UA-86397112-1', 'auto');
-        ga('send', 'pageview');
-
-    </script>
-  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-  <script>
-    (adsbygoogle = window.adsbygoogle || []).push({
-      google_ad_client: "ca-pub-2080815546000293",
-      enable_page_level_ads: true
-    });
-  </script>
+  gtag('config', 'UA-177307611-1');
+</script>
 </head>
