200908_footer 추가 변경

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,8 +4,8 @@
             <div class="myname">
                 Denny Hong
             </div>
-            <a href="mailto:hsh0617@naver.com" class="email">
-                hsh0617@naver.com
+            <a href="mailto:whatup@summerclout.dev" class="email">
+                whatup@summerclout.dev
             </a>
             <div class="accounts">
                 <a href="http://github.com/whatamelon" target="_blank" class="transition">
@@ -18,7 +18,7 @@
                     c0,0.4,0.3,0.9,1.1,0.8c6.5-2.2,11.1-8.3,11.1-15.5C32.6,7.3,25.3,0,16.3,0z"></path>
                     </svg>
                 </a>
-                <a href="http://instagram.com/its_seunghooo_" target="_blank" class="transition">
+                <a href="https://www.instagram.com/summerclout2/" target="_blank" class="transition">
                     <svg viewBox="0 0 40.2 40.3">
                     <g>
                     <path d="M20.2,3.6c5.4,0,6,0,8.2,0.1c2,0.1,3,0.4,3.7,0.7C33,4.8,33.7,5.3,34.4,6s1.1,1.4,1.5,2.3
