--- a/_includes/head.html
+++ b/_includes/head.html
@@ -35,6 +35,7 @@
 
 
   <!-- CSS -->
+  <link rel="canonical" href="https://www.summerclout.dev">
   <link rel="stylesheet" href="{{ site.baseurl }}/styles.css">
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700" rel="stylesheet">
   <link rel="shortcut icon" href="https://www.summerclout.dev/favicon.ico">
