--- a/_includes/head.html
+++ b/_includes/head.html
@@ -28,7 +28,7 @@
   
   <!-- particles -->
   <!--<link rel="stylesheet" href="css/style.css" />-->
-  <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
 
   <script type='text/javascript' src='../jquery.particleground.js'></script>
   <script type='text/javascript' src='js/demo.js'></script>
